# hermit

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  WHATS_WORKING.md  crates.js  envelope-baseline.json  help.html  index.html  settings.html  src-files.js  validate-super.sh  validate.sh
.config/: nextest.toml
.devcontainer/: devcontainer.json
ai_docs/: arbitrary-binary-matrix.md  intel-pmu-analysis.md  language-coverage.md  syscall-coverage-map.md
benchmarks/: README.md  run.py  targeted-results-2026-07-24.md  targeted.py
cas_sequence_easy_bin/: all.html  constant.FINAL_VALUE.html  constant.WORK_AMT.html  fn.do_work.html  fn.main.html  fn.take_from.html  fn.thread1.html  fn.thread2.html  index.html  sidebar-items.js
chaos_cas_sequence_bin/: all.html  constant.FINAL_VALUE.html  constant.WORK_AMT.html  fn.do_work.html  fn.main.html  fn.take_from.html  fn.thread1.html  fn.thread2.html  index.html
chaos_hello_chaos/: all.html  fn.main.html  index.html
chaos_keyvalue_bin/: all.html  fn.keyvalue_service.html  fn.main.html  index.html  sidebar-items.js  type.Key.html  type.Value.html
detcore/: Cargo.toml  all.html  constant.DEFAULT_PRIORITY.html  constant.FIRST_PRIORITY.html  constant.LAST_PRIORITY.html  enum.BlockingMode.html  enum.RunsPostFork.html  enum.SchedHeuristic.html  fn.thread_rng_from_parent.html  index.html  macro.detlog!.html  macro.detlog.html  macro.detlog_debug!.html  macro.detlog_debug.html  sidebar-items.js  struct.Config.html  struct.Detcore.html  struct.FileMetadata.html  struct.GlobalState.html  struct.Namespace.html  struct.ThreadState.html  struct.ThreadStats.html  trait.RecordOrReplay.html  type.DetTid.html  type.Priority.html
detcore-dbi/: Cargo.toml
detcore-dbi/src/: lib.rs
detcore-model/: Cargo.toml
detcore_dbi/: all.html  fn.prepare_native_client.html  fn.reverie_dbi_runtime_background_init.html  fn.reverie_dbi_runtime_name.html  fn.reverie_dbi_runtime_pre_syscall.html  fn.reverie_dbi_runtime_ready.html  fn.reverie_dbi_runtime_thread_exit.html  fn.reverie_dbi_runtime_thread_init.html  fn.reverie_dbi_runtime_totals.html  fn.runtime_library_path.html  index.html  sidebar-items.js
detcore_model/: all.html  index.html  sidebar-items.js
detcore_testutils/: all.html  fn.check_fn_with_config.html  fn.det_test_all_configs.html  fn.det_test_cmd.html  fn.det_test_cmd_with_config.html  fn.det_test_fn.html  fn.det_test_fn_with_config.html  fn.det_test_fn_with_config_repetitions.html  fn.expect_success.html  fn.test_fn_with_config.html  index.html  macro.basic_det_test!.html  macro.basic_det_test.html  macro.make_det_test_variants!.html  macro.make_det_test_variants.html  sidebar-items.js  static.BOTTOM_CFG.html  static.MIDDLE_CFG.html  static.TOP_CFG.html
digest/: all.html  index.html  sidebar-items.js  struct.Digest.html
docs/: ARCHITECTURE.md  DBI_TEST_STATUS.md  DETERMINISM_ARGUMENT.md  ERROR_CATALOG.md  FAIL_CLOSED_STATUS.md  QEMU_BOOT.md  RECORD_REPLAY_STATUS.md  STRESS_TEST_RESULTS.md  SYSCALL_COVERAGE.md  TESTING_ENVIRONMENTS.md  USER_GUIDE.md  Users.md  futex-determinism.md  (+6 more)
(+1324 files in other folders)
