[package]
name = "detcore-dbi"
version = "0.0.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/facebookexperimental/hermit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
detcore = { version = "0.0.0", path = "../detcore" }
libc = "0.2.186"
reverie = { version = "0.1.0", git = "https://github.com/rrnewton/reverie.git", rev = "9e3ddd04327d5ba64a99c23581dca4534a1be556" }
reverie-dbi = { version = "0.1.0", git = "https://github.com/rrnewton/reverie.git", rev = "9e3ddd04327d5ba64a99c23581dca4534a1be556", default-features = false }
