[package]
name = "detcore-dbi"
version = "0.0.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/facebookexperimental/hermit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
detcore = { version = "0.0.0", path = "../detcore" }
libc = "0.2.186"
reverie = { version = "0.1.0", git = "https://github.com/rrnewton/reverie.git", rev = "35dc0af48504f96f9418204694fb3a9d913dd792" }
reverie-dbi = { version = "0.1.0", git = "https://github.com/rrnewton/reverie.git", rev = "35dc0af48504f96f9418204694fb3a9d913dd792", default-features = false }
